[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
litesvm = "0.10.0"
litesvm-token = "0.10.0"
solana-sdk = "3.0.0"
solana-system-interface = "3.1.0"
solana-transaction = "3.1.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"